--- a/To-buy.html
+++ b/To-buy.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 	<head>
-		<title>Mini Challenge 5</title>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<style>
 			body {
 				background-color: #dcd3ff;
@@ -35,8 +36,8 @@
 				background-color: #6eb5ff;
 			}
 		</style>
+		<title>Things To Buy</title>
 	</head>
-
 	<body>
 		<h2>TO BUY:</h2>
 		<div class="grid" id="first-list"></div>
